kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-app
  labels:
    app: mlops-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mlops-app
  template:
    metadata:
      labels:
        app: mlops-app
    spec:
      containers:
      - name: mlops-app
        image: ghcr.io/nbms12/MLOps-project:sha-6a91cf6286c1659aaea56a01fc6c81b9513dcfc5
        # Image will be automatically updated by CI/CD pipeline
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
